# TokenFlow-Router

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_REPORT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: quickstart.sh
examples/autoscale/: endpoint_actions.example.json  spot_adapter.py  tokenflow_capacity_controller.py
examples/configs/: policy.yaml  policy_cost_first.yaml  policy_latency_first.yaml
examples/demo/: 01_short_chat.sh  02_reasoning.sh  03_prefill_heavy.sh  04_premium_tenant.sh  05_explain.sh  06_policy_swap.sh  README.md  RESULTS.md  _lib.sh  benchmark.py  benchmark_high_conc.json  benchmark_low_conc.json  benchmark_saturation.json  benchmark_v4.json  deploy_backends.sh  prometheus_after.txt  prometheus_before.txt  prometheus_v4.txt
examples/production_demo/: COMPARISON.md  README.md  benchmark.py  chart.py  setup.sh
examples/requests/: sample_requests.json
examples/telco_demo/: COLD_START.md  README.md  benchmark.py  chart.py  cold_start_timing.sh  quality_eval.py  setup.sh
scripts/: install.sh
simulator/: __init__.py  engine.py
tests/integration/: test_api.py  test_ollama_honest_benchmark.py  test_ollama_live_benchmark.py  test_ollama_optimizations.py
tests/unit/: test_all_backends_warm_scoring.py  test_backend_guidance.py  test_classifier.py  test_ollama_routing_benchmark.py  (+4 more)
tokenflow/: __init__.py  benchmarks.py  classifier.py  cli.py  config.py  main.py  models.py  observability.py  onboarding.py  profiles.py  registry.py  router.py  telemetry.py
(+57 files in other folders)
