[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenflow-router"
version = "0.1.0"
description = "Request-aware policy router for NVIDIA NIM inference endpoints"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["nvidia", "nim", "llm", "routing", "inference", "agentic-ai"]
authors = [{ name = "TokenFlow Contributors" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "PyYAML>=6.0.1",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "anyio>=4.4.0",
    "python-multipart>=0.0.9",
    "rich>=13.7.1",
    "typer>=0.12.0",
]

[project.optional-dependencies]
tiktoken = [
    "tiktoken>=0.7.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
tokenflow = "tokenflow.cli:app"

[tool.setuptools]
packages = ["tokenflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
